tests/ui/invalid_result_conversion.stderr
error[E0277]: the trait bound `PyErr: From<MyError>` is not satisfied
  --> tests/ui/invalid_result_conversion.rs:22:25
   |
22 | fn should_not_work() -> Result<(), MyError> {
   |                         ^^^^^^ the trait `From<MyError>` is not implemented for `PyErr`
   |
   = help: the following other types implement trait `From<T>`:
             `PyErr` implements `From<AddrParseError>`
             `PyErr` implements `From<CastError<'_, '_>>`
             `PyErr` implements `From<CastIntoError<'_>>`
             `PyErr` implements `From<DecodeUtf16Error>`
             `PyErr` implements `From<DowncastError<'_, '_>>`
             `PyErr` implements `From<DowncastIntoError<'_>>`
             `PyErr` implements `From<FromUtf16Error>`
             `PyErr` implements `From<FromUtf8Error>`
           and $N others
   = note: required for `MyError` to implement `Into<PyErr>`
